class.newInstance 改为 constructor.newInstance