@@ -1,5 +1,7 @@
 package com.vo.zclass;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.codehaus.commons.compiler.CompileException;
 import org.codehaus.janino.SimpleCompiler;
 
@@ -27,15 +29,16 @@ public class ZCU {
 	public static Object newInstance(final String source, final String package1, final String className) {
 		final SimpleCompiler compiler = new SimpleCompiler();
 		try {
+
 			compiler.cook(source);
-			
 
 			final String cN = package1.substring(package1.indexOf(PACKAGE) + PACKAGE.length()) + "." + className;
 			final Class<?> cls = compiler.getClassLoader().loadClass(cN);
-			final Object newInstance = cls.newInstance();
+			final Object newInstance = cls.getDeclaredConstructor().newInstance();
 
 			return newInstance;
-		} catch (final CompileException | ClassNotFoundException | InstantiationException | IllegalAccessException e1) {
+
+		} catch (final CompileException | ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e1) {
 			e1.printStackTrace();
 		}
 
